--- a/ai/pyvenv.cfg
+++ b/ai/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Python312
+home = C:\Users\jlian\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0
 include-system-site-packages = false
 version = 3.12.4
-executable = C:\Python312\python.exe
-command = C:\Python312\python.exe -m venv C:\Users\jlian\Documents\GitHub\Ai-Health-Assistant\ai
+executable = C:\Users\jlian\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe
+command = C:\Users\jlian\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe -m venv C:\Users\jlian\Documents\GitHub\Ai-Health-Assistant\ai
